fixed path to JS file on email.html, testing solutions for overflow while scrolling on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ html, body {
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden; 
+    overflow-x:hidden; 
 }
 
 .background {
@@ -199,6 +199,7 @@ a:not([href]) {
     background-color:white;
     border-bottom:none;
     color:rgb(43, 83, 196);
+    overflow-y:hidden;
 }
 
 .social-icon{
@@ -579,10 +580,9 @@ a:not([href]) {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height:100%;
+    height:100vh;
     max-width:100vw;
 }
-
 
 .info-home-btn{
     background-color:transparent;
